<resources>
    <string name="app_name">nimBees Showcase</string>

    <string name="api_key">AIzaSyAJC5m7BSGlk1UFqC-8Kj-8CAFgdF3nz3o</string>

    <string name="hello_world">Hello nimBees!</string>
    <string name="action_settings">Settings</string>
    <string name="register_button">nimBees</string>
    <string name="get_tags_button">Get Tags</string>
    <string name="add_value_button">Add Value</string>
    <string name="get_beacons_button">Get Beacons</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="user_id">Your ID : </string>
    <string name="enter_value">Enter a value for </string>
    <string name="not_registered">User not registered</string>
    <string name="user_registered">User registered!</string>
    <string name="register_fail">Registration failed. Please check that your APP KEY, APP SECRET and GCM SENDER ID are correctly configured on the app.properties file</string>
    <string name="beacon_error">Not supported by your device</string>


    <!-- Drawer Fragment -->

    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="title_section0">nimBees</string>
    <string name="title_section1">Information</string>
    <string name="title_section2">Notifications</string>
    <string name="title_section3">Tags</string>
    <string name="title_section4">Beacons</string>
    <string name="title_section5">Map</string>
    <string name="title_section6">Configuration</string>
    <string name="title_empty">User not registered</string>

    <!-- Configuration Fragment -->


    <string name="configuration_header_notifications">Notifications</string>
    <string name="settings_toggle_notifications">Receive notifications</string>
    <string name="settings_view_notifications">Notifications settings</string>

    <string name="configuration_header_beacons">Beacons</string>
    <string name="settings_toggle_beacons">Background beacons search</string>
    <string name="settings_view_beacon_actions">Beacons Actions</string>

    <string name="configuration_header_location">Location</string>
    <string name="settings_toggle_location">Location tracking</string>
    <string name="settings_view_location_actions">Location Actions</string>


    <!-- Drawer Fragment -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="warning_user_not_registered">Please register before accessing any other screen of the app. Thanks!</string>
    <string name="warning_no_notifications">You haven\'t received any notifications yet...</string>
    <string name="warning_no_beacons">There are no beacons saved for the app. Please try loading them with the <b>Get Beacons</b> button if you have beacons defined but they are not being shown here.</string>
    <string name="warning_no_tags">There are no tags saved for the app. Please try loading them with the <b>Get Tags</b> button if you have tags defined but they are not being shown here.</string>
    <string name="warning_no_tag_values">The selected tag does not have any values assigned for the current user</string>
    <string name="boolean_value_true">True</string>
    <string name="boolean_value_false">False</string>
    <string name="error_loading_beacons">Error loading beacons from server, please try again later.</string>
    <string name="error_removing_tag_value">Error removing tag value</string>
    <string name="error_adding_tag_value">Error adding tag value</string>
    <string name="error_loading_tag_values">Error loading tag values from the server</string>
    <string name="error_loading_tags">Error loading tags from the server</string>
    <string name="warning_no_map">Trying to load Google Maps... if this takes too long, it\'s probably misconfigured: please check that the API key set in the AndroidManifest.xml file is correct!</string>
    <string name="error_starting_beacon_monitoring">"Cannot enable beacon monitoring: "</string>
    <string name="add_value">Add Value</string>
    <string name="connect_button">Connect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_information_title">nimBees Showcase</string>
    <string name="fragment_information_explain">nimBees Showcase is an app to show functional examples of the most important features of the nimBees Platform Service available on www.nimbees.com.</string>
    <string name="fragment_information_access">You can access into the management portal ( api.nimbees.com ) with the following demo credentials:</string>
    <string name="fragment_information_user">Username: testing@nimbees.com</string>
    <string name="fragment_information_password">Password: 1234</string>
    <string name="fragment_information_screen_title">Screen Transitions in Notifications</string>
    <string name="fragment_information_transition_explain">To test the behaviour of the Screen Transition feature, you can send a new message selecting this notification type from the combo list when composing the notification content. You should include one of the follwing values in the Screen labeled textfield to test the automatic screen transition behaviour:</string>
    <string name="fragment_information_table_value">Value</string>
    <string name="fragment_information_table_action">Action</string>
    <string name="fragment_information_table_map">MAP</string>
    <string name="fragment_information_table_map_value">The Map screen is automatically opened when the notification is received in the device.</string>
    <string name="fragment_information_notifications">NOTIFICATIONS</string>
    <string name="fragment_information_notifications_value">The Notification screen is automatically opened.</string>

</resources>
