<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fragment_information_title"
            android:textAppearance="@style/TextAppearance.FontPath.ubuntuBold"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:autoLink="web"
            android:text="@string/fragment_information_explain"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:autoLink="web"
            android:text="@string/fragment_information_access"/>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5sp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_information_user"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:layout_weight="1"
                    android:text="@string/fragment_information_password"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fragment_information_screen_title"
            android:textAppearance="@style/TextAppearance.FontPath.ubuntuBold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:text="@string/fragment_information_transition_explain"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_information_table_value"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_weight="1"
                    android:text="@string/fragment_information_table_action"
                    android:textColor="@color/black"/>
            </TableRow>

            <View
                android:layout_height="1dip"
                android:layout_marginTop="2sp"
                android:background="@color/app_accent"/>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/fragment_information_table_map"
                    android:textAppearance="@style/TextAppearance.FontPath.ubuntuBold"
                    android:textColor="@color/oceanBlue"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_weight="1"
                    android:text="@string/fragment_information_table_map_value"
                    android:textColor="@color/black"/>
            </TableRow>

            <View
                android:layout_height="1dip"
                android:layout_marginTop="2sp"
                android:background="@color/app_accent"/>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3sp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/fragment_information_notifications"
                    android:textAppearance="@style/TextAppearance.FontPath.ubuntuBold"
                    android:textColor="@color/oceanBlue"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_weight="1"
                    android:text="@string/fragment_information_notifications_value"
                    android:textColor="@color/black"/>
            </TableRow>

            <View
                android:layout_height="1dip"
                android:layout_marginTop="2sp"
                android:background="@color/app_accent"/>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_weight="1"/>

    </LinearLayout>

</ScrollView>
